# ai-doc-pipeline

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_docs.py
ai-doc-pipeline/src/ai_doc_pipeline/: __init__.py  ai_client.py  cli.py  exporter.py  extractor.py  models.py  orchestrator.py  prompts.py
ai-doc-pipeline/src/tests/: test_ai_client.py  test_extractor.py
