[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-doc-pipeline"
version = "0.2.0"
description = "Локальный генератор документации на базе Qwen 7B + AST"
requires-python = ">=3.10"
license = {text = "MIT"}
dynamic = ["dependencies"]

[project.scripts]
ai-doc-gen = "ai_doc_pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 99
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"